[tool.poetry]
name = "comicer"
version = "0.1.1"
description = "a comic downloader"
authors = ["Ye Jun <yejun.code@gmail.com>"]
readme = "README.md"
include = ["config.toml"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
playwright = "^1.29.0"
pydantic = "^1.10.4"
toml = "^0.10.2"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-playwright = "^0.3.0"
black = {version = "^23.1a1", allow-prereleases = true}
types-toml = "^0.10.8.1"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
comicer = "comicer.command:main"
